--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,7 +2,7 @@
   display: none;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   text-align: center;
   background-color: rgba(0, 0, 0, .3);
   position: fixed;
@@ -12,17 +12,13 @@
   left: 0;
   margin: auto;
   z-index: 1;
-}
-/*
-.profile__edit-button + .popup{
-  visibility: hidden;
+  transition: opacity 1s ease-out;
   opacity: 0;
-  transition: visibility 10s; opacity: .5s linear;
+  height: 0;
+  overflow: hidden;
 }
 
-
-.profile__edit-button:active + .popup{
-  visibility: visible;
+popup.active {
   opacity: 1;
+  height: auto;
 }
- */
