--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,5 +1,5 @@
 .popup-image {
-  display: flex;
+  display: none;
   flex-direction: row;
   width: 100%;
   height: 100%;
@@ -12,4 +12,3 @@
   margin: auto;
   z-index: 1;
 }
-
