--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,5 +1,5 @@
 .popup-image {
-  display: none;
+  display: block;
   flex-direction: row;
   width: 100%;
   height: 100%;
@@ -11,4 +11,7 @@
   left: 0;
   margin: auto;
   z-index: 1;
+  transition: all 1s ease;
+  opacity: 0;
+  visibility: hidden;
 }
